--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+.flex-md {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 10px;
+}
+.cursor {
+ cursor: pointer;
+}
+td {
+  padding-top: 5px;
+}
+
+button {
+
+}
